add auth & tests use seeder data now
